# maci-telegram-bot-rs

./: .env.template  Cargo.toml  Dockerfile  diesel.toml
.github/workflows/: ci.yml
migrations/2024-06-22-154551_create_users/: down.sql  up.sql
migrations/2024-06-22-175231_update_the_username_field/: down.sql  up.sql
migrations/2024-06-22-181031_added_more_fields_on_users_table/: down.sql  up.sql
migrations/2024-06-22-182501_create_tg_group_table/: down.sql  up.sql
migrations/2024-06-22-225057_create_tg_group_user/: down.sql  up.sql
migrations/2024-06-25-080815_created_polls_table/: down.sql  up.sql
src/: bot.rs  database.rs  main.rs  models.rs  schema.rs  utils.rs  voting_api.rs
