[package]
name = "maci-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = "0.4.38"
reqwest = {version =  "0.12.5", features = ["json"] }
serde = {version =  "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
